applications/traefik/02traefik-dashboard.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: traefik-dashboard
#   namespace: traefik
# spec:
#   entryPoints:
#     - web
#     - websecure
#   routes:
#     - match: Host(`test.thexiao77.com`)
#       kind: Rule
#       services:
#         - name: api@internal
#           kind: TraefikService
# middlewares:
#   - name: https-redirect-middleware-traefik-dashboard
#     namespace: traefik
#   tls:
#     secretName: traefik-dashboard-tls
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: https-redirect-middleware-traefik-dashboard
#   namespace: traefik
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: traefik-dashboard-certificate
#   namespace: traefik
# spec:
#   secretName: traefik-dashboard-tls
#   issuerRef:
#     name: letsencrypt-production
#     kind: Issuer
#   commonName: test.thexiao77.com
#   dnsNames:
#     - test.thexiao77.com

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  rules:
    - host: test.thexiao77.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: traefik
                port:
                  number: 8080
  tls:
    - hosts:
        - test.thexiao77.com
      secretName: traefik-dashboard-tls
